objects/DandB_Warning__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_Warning</relationshipLabel>
        <relationshipName>DandB_Warning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>elementName__c</fullName>
        <label>elementName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xPath__c</fullName>
        <label>xPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DandB_Warning</label>
    <nameField>
        <label>DandB_Warning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_Warning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>